--- a/Backups/Backups.csproj
+++ b/Backups/Backups.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Isu\Isu.csproj" />
+  </ItemGroup>
+
 </Project>
